# spice-road-mvp

./: .gitignore  .tool-versions  DEPLOYMENT.md  README.md  docker-compose.yml  package-lock.json  setup.sh  test_cpp26_only.sh  test_full_app.sh
.github/workflows/: deploy-cloudrun.yml.old  deploy.yml  e2e-tests.yml
api/: package-lock.json  package.json
api/src/: app.ts
api/src/types/: index.ts
cpp-api/: CMakeLists.txt  Dockerfile  Dockerfile.production  README_POSTGRES.md  cloudbuild.yaml  import_shops.sql  init-db.sh  nginx.production.conf  openapi.yaml  schema.sql
cpp-api/nginx/: nginx.conf  swagger-ui.html
cpp-api/src/: main.cpp
cpp-api/src/database/: connection_pool.cpp  connection_pool.hpp
cpp-api/src/domain/: shop.hpp  user.hpp
cpp-api/src/repository/: i_repository.hpp  json_repository.cpp  json_repository.hpp  postgres_shop_repository.cpp  postgres_shop_repository.hpp  postgres_user_repository.cpp  postgres_user_repository.hpp
cpp-api/src/router/: router.cpp  router.hpp
cpp-api/src/service/: shop_service.cpp  shop_service.hpp  user_service.cpp  user_service.hpp
cpp-api/src/validation/: user_validator.hpp
cpp-api/tests/database/: connection_pool_test.cpp
cpp-api/tests/repository/: shop_repository_test.cpp
database/: add_regions.js  shops.json  users.json
database/sql/init/: 01_schema.sql  02_seed_data.sql
docs/: DEPLOYMENT.md  GITHUB_ACTIONS_TEMPLATE.md
docs/adr/: 004-user-registration-security.md
e2e/: .env.example  README.md  diagnose-cloud-run.js  package.json  playwright.config.ts  tsconfig.json
e2e/tests/cloud-run/: deployment.spec.ts  smoke.spec.ts
e2e/tests/local/: api.spec.ts  frontend.spec.ts  map.spec.ts
e2e/tests/shared/: fixtures.ts  helpers.ts
frontend/: .env.example  Dockerfile  cloudbuild.yaml  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend-old/: package.json
frontend-old/public/: index.html  sw.js
frontend-old/src/: App.css  App.tsx  App.tsx.backup  index.tsx
frontend-old/src/components/: LeafletMap.tsx  SearchBar.tsx  ShopCard.tsx  SpiceChart.tsx  UserProfileCard.tsx  UserRegistrationForm.tsx
frontend-old/src/hooks/: useGeolocation.ts
frontend-old/src/types/: index.ts
frontend/public/: manifest.json  sw.js
frontend/src/: App.css  App.tsx  index.tsx  vite-env.d.ts
frontend/src/components/: FilterBar.tsx  GoogleMap.tsx  LeafletMap.tsx.backup  LocationIndicator.tsx  SearchBar.tsx  ShopCard.tsx  SpiceChart.tsx  SpiceQuadrantMap.tsx  UserProfileCard.tsx
frontend/src/components/css/: GoogleMap.css  LeafletMap.css  SearchBar.css  SpiceChart.css  UserProfileCard.css
frontend/src/config/: appConfig.ts  spiceConfig.ts
frontend/src/hooks/: useGeolocation.test.ts  useGeolocation.ts
frontend/src/test/: setup.ts
frontend/src/theme/: md3Theme.ts
frontend/src/types/: index.ts
frontend/src/utils/: coordinates.test.ts  coordinates.ts
nginx/: Dockerfile  nginx.cloudrun.conf  nginx.conf  swagger-ui.html
terraform/gcp/: .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  README.md  main.tf  outputs.tf  terraform.tfvars.example  test_target.sh  variables.tf  versions.tf
terraform/gcp/modules/artifact-registry/: main.tf  outputs.tf  variables.tf
terraform/gcp/modules/cloud-build/: main.tf  outputs.tf  variables.tf
terraform/gcp/modules/cloud-run/: main.tf  outputs.tf  variables.tf
terraform/gcp/modules/cloud-sql/: main.tf  outputs.tf  variables.tf
terraform/gcp/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/gcp/modules/memorystore/: main.tf  outputs.tf  variables.tf
terraform/gcp/scripts/: create-state-bucket.sh  tf-apply.sh  tf-destroy.sh  tf-init.sh  tf-plan.sh
terraform/gcp/tests/: terraform_validate_test.sh
tests/: api_integration_test.sh  e2e_test.sh  run_all_tests.sh
